--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,25 @@
       <input type="password" class="form-control" formControlName="confirmPassword">
     </div>
 
+
+    <div  formGroupName="address">
+      <div class="form-group">
+        <label>Street</label>
+        <input type="text" class="form-control" formControlName="street">
+      </div>
+
+      <div class="form-group">
+        <label>Postal Code</label>
+        <input type="text" class="form-control" formControlName="postalCode">
+      </div>
+
+      <div class="form-group">
+        <label>City</label>
+        <input type="text" class="form-control" formControlName="city">
+      </div>
+    </div>
+
+
     <button type="submit" class="btn btn-primary">Register</button>
   </form>
 
