manage control values

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,7 @@
 
 
     <button type="submit" class="btn btn-primary">Register</button>
+    <button class="btn btn-secondary ml-2" type="button" (click)="loadApiData()">Load API Data</button>
   </form>
 
   {{registrationForm.value | json}}
