--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,16 @@
   <form [formGroup]="registrationForm">
     <div class="form-group">
       <label>Username</label>
-      <input type="text" class="form-control" formControlName="userName">
+      <input type="text" class="form-control" formControlName="userName" [class.is-invalid]="registrationForm.get('userName').invalid 
+                                                                                            && registrationForm.get('userName').touched">
+      <!-- <small class="text-danger" [class.d-none]="registrationForm.get('userName').valid 
+      || registrationForm.get('userName').untouched">Username is required</small> -->
+
+      <div *ngIf="registrationForm.get('userName').invalid 
+      && registrationForm.get('userName').touched">
+        <small *ngIf="registrationForm.get('userName').errors?.required" class="text-danger">Username is required</small>
+        <small *ngIf="registrationForm.get('userName').errors?.minlength" class="text-danger">Username must be at least 3 characters</small>
+      </div>
     </div>
 
     <div class="form-group">
