--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,15 @@
   <form [formGroup]="registrationForm">
     <div class="form-group">
       <label>Username</label>
-      <input type="text" class="form-control" formControlName="userName" [class.is-invalid]="registrationForm.get('userName').invalid 
-                                                                                            && registrationForm.get('userName').touched">
-      <!-- <small class="text-danger" [class.d-none]="registrationForm.get('userName').valid 
-      || registrationForm.get('userName').untouched">Username is required</small> -->
+      <input type="text" class="form-control" formControlName="userName" [class.is-invalid]="userName.invalid 
+                                                                                            && userName.touched">
+      <!-- <small class="text-danger" [class.d-none]="userName.valid 
+      || userName.untouched">Username is required</small> -->
 
-      <div *ngIf="registrationForm.get('userName').invalid 
-      && registrationForm.get('userName').touched">
-        <small *ngIf="registrationForm.get('userName').errors?.required" class="text-danger">Username is required</small>
-        <small *ngIf="registrationForm.get('userName').errors?.minlength" class="text-danger">Username must be at least 3 characters</small>
+      <div *ngIf="userName.invalid 
+      && userName.touched">
+        <small *ngIf="userName.errors?.required" class="text-danger">Username is required</small>
+        <small *ngIf="userName.errors?.minlength" class="text-danger">Username must be at least 3 characters</small>
       </div>
     </div>
 
