--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,19 @@
     </div>
 
     <div class="form-group">
+      <label>Email</label>
+      <input type="email"  [class.is-invalid]="email.invalid && email.touched" class="form-control" formControlName="email">
+      <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is required</small>
+    </div>
+
+    <div class="form-check mb-3">
+      <input type="checkbox" class="form-check-input" formControlName="subscribe">
+      <label class="form-check-label">
+        Send me promotional offers
+      </label>
+    </div>
+
+    <div class="form-group">
       <label>Password</label>
       <input type="password"  class="form-control" formControlName="password">
     </div>
