--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,12 @@
 
     <div class="form-group">
       <label>Email</label>
+      <button type="button" class="btn btn-secondary btn-sm m-2" (click)="addAlternateEmail()" >Add e-mail</button>
       <input type="email"  [class.is-invalid]="email.invalid && email.touched" class="form-control" formControlName="email">
       <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is required</small>
+      <div formArrayName="alternateEmails" *ngFor="let email of alternateEmails.controls; let i = index">
+        <input type="email" class="form-control m-1" [formControlName]="i">
+      </div>
     </div>
 
     <div class="form-check mb-3">
